Fixed spacing

--- a/_sass/all.sass
+++ b/_sass/all.sass
@@ -180,8 +180,8 @@ ul.buttons
 			border: 2px solid $color-accent
 			color: $color-accent
 			display: block
-			margin-right: 10px
-			padding: 6px 10px
+			margin-right: 20px
+			padding: 6px 20px
 			&:hover
 				color: $color-stroke
 				border: 2px solid $color-stroke
@@ -203,8 +203,6 @@ ul.buttons
 .panel
 	p
 		color: $color-soft
-
-
 
 .frag
 	background: rgba(255,255,255, 0.5)
